# OpenGLPractice

./: CMakeLists.txt  LICENSE  README.md
include/: cubeModel.h  displayer.h  model.h  niftiModel.h  niftiReader.h  shaderReader.h  sliceModel.h
src/: CMakeLists.txt  cubeModel.cpp  displayer.cpp  niftiModel.cpp  niftiReader.cpp  shaderReader.cpp  sliceModel.cpp
test/: CMakeLists.txt  test001.cpp  test002.cpp
